Stone Soup 0.6
--------------
* Two new gods: Jiyva, god of slime, and Feawn, god of plants.
* Shorten Lair to eight levels.
* Added scroll of silence.
* Several new uniques.
* Overhaul Wanderers.
* Starting stats and equipment, and hp gain, are no longer assigned randomly.
* Round all aptitudes to multiples of 10.
* New memorisation interface.
* Exclusions are displayed in the overview screen ('Ctrl-O' command).
* Autoexclusions get removed again once the trigger monster is no longer there.
* Armour acquirement is more likely to fill secondary slots.
* Book acquirement doesn't give manuals to spellcasting specialists anymore.
* Added wands as an acquirement option.
* Detected secret doors are still unknown to stupid monsters.
* Let toadstools grow on corpses.
* All worms apart from brain worms are mindless and cannot be pacified.
* Hungry ghosts eat corpses.
* Abort some teleportation attempts with -TELE without losing the turn.
* Weapons of holy wrath cannot be cursed.
* Reduce the chances for artefacts with only one stat property.
* Add !a inscription to prompt when attacking with this wielded item.
* Upgrade equipment of Sonja, Psyche and Terence.
* Jessica casts Pain and is considered evil.
* Unrandarts and fixedarts share the same, cleaner coding structure.
* More vaults.
* Limit Summon Small Mammals to a maximum of two mammals per casting.
* Call Canine Familiar only calls friendly canines.
* Add some tiles "animations" whenever the screen is redrawn.
* Tiles: re-added doll editing screen ('-' command).
* Tiles: added clickable spells display (toggle with '_' command).

Stone Soup 0.5.1 (20090728)
---------------------------

Disclaimer: These are merely the highlights, not an exhaustive list of changes.

* Improved performance for the Tiles version.
* Fixed crashes related to giant spores.
* Fixed Summon Horrible Things sometimes hanging or crashing.
* Fixed monsters refusing to enter or attack into grids on the map edge.